<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context=".StartTwoActivity" >

    <TextView
        android:id="@+id/labelLine"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:textSize="18sp"
        android:textStyle="italic"
        android:text="@string/enter_confirmation_code_from_text" />


        <EditText android:id="@+id/confirmationCode"
            android:layout_marginTop="15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:inputType="text"/>



        <Button android:id="@+id/btnConfirm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dip"
                android:textStyle="bold"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/round_button_stage_two"
                android:text="@string/go"/>

    <TextView
        android:id="@+id/bottomLine"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:textSize="18sp"
        android:gravity="center_horizontal"
        android:visibility="invisible"
        android:text="@string/setting_you_up" />


</LinearLayout>
